--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.2.6",
     "nodemon": "^2.0.15"
   }
