--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 JWT_SECRET_KEY = "MySecretKey"
 MONGODB_URI = mongodb+srv://josemakerdeng:9aaK4zKs2by4xTTX@cluster0.nw2o7lz.mongodb.net/?retryWrites=true&w=majority
 
+EMAIL_PASSWORD = 'aghc wfpv padg couk'
