--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.43",
     "mongoose": "^6.2.6",
+    "nodemailer": "^6.9.7",
     "nodemon": "^2.0.15"
   }
 }
